# Stage2-BigData

./: .gitignore  README.md  docker-compose.yml
benchmark_results/html_reports/: indexing-service_container_performance.html  ingestion-service_container_performance.html  search-service_container_performance.html  system_workflow_performance.html
control-module/: Cargo.toml  Dockerfile
control-module/src/: main.rs
indexing-service/: Cargo.toml  Dockerfile
indexing-service/benches/: indexing_benchmark.rs
indexing-service/src/: main.rs
indexing-service/src/models/: responses.rs  storage.rs
indexing-service/src/routes/: health.rs  index.rs
indexing-service/src/services/: indexing.rs
indexing-service/src/utils/: file.rs  mod.rs  text.rs
ingestion-service/: Cargo.toml  Dockerfile
ingestion-service/benches/: ingestion_benchmark.rs
ingestion-service/src/: main.rs
ingestion-service/src/models/: responses.rs
ingestion-service/src/routes/: health.rs  ingest.rs
ingestion-service/src/services/: download.rs
ingestion-service/src/utils/: file.rs
scripts/: plot_benchmarks.py  requirements_for_plot.txt
search-service/: Cargo.toml  Dockerfile
search-service/benches/: search_benchmark.rs
search-service/src/: main.rs
search-service/src/models/: mod.rs  responses.rs  storage.rs
search-service/src/routes/: health.rs  mod.rs  search.rs
